docs/데이터파트/version4.6/HF_배포_변경이력.md
# HF 배포 변경이력 — 정본

> 데이터파트 v4.6 · 이 파일이 **정본**입니다.
> 반출할 때 `data/outbox/<날짜>/CHANGES.md` 로 복사되어 HF 카드에 실립니다.
>
> 🔴 **왜 저장소에 두나.** 반출 폴더는 `.gitignore` 됩니다(KRX 이용약관 제11조 ②).
> 고지문이 HF 서버에만 있으면 다음 배포가 그 파일을 덮는 순간 이력이 사라집니다.
> 실제로 서버 `CHANGES.md` 가 2026-09-03 에서 멈춰 있었고, 그 사이 세 번의 배포
> (09-05 · 09-07 오전 · 09-07 오후)가 팀원에게 한 번도 고지되지 않았습니다.
>
> **새 배포마다 맨 위에 절을 더합니다.** 오래된 것을 지우지 않습니다.

---

## 🆕 2026-09-11 (저녁) — 개발본은 그대로입니다 · 홀드아웃 결과는 별도 레포

**이 레포(`alphastack-krx-dev`)에서 다시 받을 파일은 없습니다.** 16:18 에 홀드아웃을 한 번 열었고, 연 자료(봉인본)의
개발구간을 이 레포의 `full/daily_price_dev.parquet` 와 대조해 **37칸 · 7,888,945행 · 바뀐 행 0** 을 확인했습니다.
재배포 판정기도 종료코드 0(재배포 불필요 · 16:52)입니다. 아래 오후 절(커밋 `b5e3d52c`)이 최신입니다.

| | 값 |
|---|---|
| 홀드아웃 결과 | **private `qurious-quant/alphastack-krx-holdout`** 커밋 `2aab6bd1` — 예측 셋 + `report.json` (원자료 가격 없음) |
| 🔴 쓰는 법 | 이 레포의 개발본과 **섞어 학습하지 마십시오.** 결과를 보고 모델·피처·임계값을 다시 고르지 않습니다 |
| 봉인본(원자료) | 올리지 않습니다 |

---

## 2026-09-11 (오후) — 코드를 다시 받은 종목의 업종·주권종류 (37칸 그대로)

**다시 받을 파일은 `full/daily_price_dev.parquet` 하나입니다.** 칸 구성은 그대로이고, **한 종목(`036220`)의
74행**에서 업종·주권종류가 **빈 칸으로** 바뀌었습니다. 나머지 행과 칸, 다른 파일은 그대로입니다.

### 🔴 무엇이 틀렸었나 — 앞 회사의 기록이 뒤 회사의 행에 붙어 있었습니다

상장폐지된 종목의 코드를 몇 년 뒤 다른 회사가 다시 받는 일이 있습니다. 우리 자료에서는 두 곳입니다.

| 코드 | 앞 회사 | 뒤 회사 |
|---|---|---|
| `036220` | 인포피아 (~2016-05-04) | 오상헬스케어 (2024-03-13 상장) |
| `101970` | 우양에이치씨 (~2015-03-16) | 우양에이치씨 (2025-03-28 상장 · 홀드아웃이라 이 파일에는 없습니다) |

업종·주권종류는 *"그 행의 날짜까지 알게 된 가장 최근 기록"* 을 붙이는데, 그 기록이 **얼마나 오래됐는지는 보지
않았습니다.** 그래서 오상헬스케어의 첫 몇 달에 2016년 인포피아의 기록이 붙어 있었습니다. 이제 **같은 회사(같은
상장 구간)의 기록만** 붙입니다.

| 칸 | 바뀐 행 | 어떻게 바뀌었나 |
|---|---:|---|
| `industry` · `industry_bas_dd` · `industry_known_at` · `industry_ambiguous` | 각 74 | 2024-03-13 ~ 07-01 — 2016-01-04 스냅샷(인포피아의 '제약') → **빈 칸**. 오상헬스케어가 처음 실린 2024-07-01 스냅샷은 다음 거래일(07-02)부터 붙습니다 |
| `kind_stkcert_tp_nm` · `secugrp_nm` · `sect_tp_nm` | 각 1 | 2024-03-13 상장일 — 2016-05-04 인포피아의 기록 → **빈 칸**. 다른 신규상장 첫날과 같습니다 |

붙어 있던 옛 값('제약' · '보통주')이 오상헬스케어의 나중 값과 **우연히 같아서** 값으로는 틀린 것이 보이지 않았습니다.

### 무엇이 달라지나

| 쓰임 | 영향 |
|---|---|
| 팀 모델 (KOSPI 후보·피처) | **없습니다** — `036220` 은 KOSDAQ 입니다 |
| KOSDAQ 을 업종으로 묶는 분석 | `036220` 이 2024-03-13 ~ 07-01 동안 업종 없음으로 빠집니다 |
| 보통주 거르기 | 상장일 1행이 빠집니다 — `is_first_listing` 이라 원래 학습에서 덜어내던 행입니다 |
| 최종모델 드라이런 | KOSPI 행은 한 행도 안 바뀌어 결과가 같아야 합니다. 개봉 전 동결 원칙상 이 반출본으로 한 번 더 확인해 주십시오 (이슈 #240) |

### 판정기로는 안 보이는 종류라 따로 쟀습니다

재배포 판정기(`verify_hf_dataset`)는 반출과 **같은 함수**로 업종·주권종류를 붙이므로 이 잘못을 같이 가지고
있었습니다. 그래서 이번 수정은 판정기가 아니라 **판정기와 다른 코드(단순 루프)** 로 기대값을 만들어 확인했습니다 —
두 종목 전 행 불일치 0 (PR #253).

### 실측

| | 값 |
|---|---:|
| 반출본 행 | 7,888,945 (안 바뀜) |
| 바뀐 행 (어느 칸이든) | **74** (`036220` 한 종목) |
| 업종 채움 | 7,736,416 → **7,736,342** |
| 보통주 | 7,416,721 → **7,416,720** |

---

## 2026-09-11 (오전) — 업종·주권종류를 **알게 된 다음 날부터** 붙인다 (37칸 그대로)

**다시 받을 파일은 `full/daily_price_dev.parquet` 하나입니다.** 칸 구성은 그대로이고, **일곱 칸의 값이
42,161행에서 바뀌었습니다**(전체 7,888,945행의 0.53% · 3,462종 · 1,867거래일). 가격 · 수정주가 · 총수익 ·
기업행위 판정 · 품질 플래그 칸은 **한 행도 안 바뀌었습니다.**

### 🔴 무엇이 틀렸었나 — 그날 마감 뒤에 나온 표가 그날 행에 붙어 있었습니다

업종 스냅샷과 종목기본정보(주권종류 · 증권그룹 · 소속부)는 **그날 장이 끝난 뒤에야** 알 수 있는 표입니다 —
`known_at` 이 다음 거래일입니다. 그 칸은 있었는데, 반출이 이 표를 **날짜로** 붙여서 표가 나온 그날의 행이
그 표를 미리 보고 있었습니다. 이제 행마다 **`known_at <= 행 날짜`** 인 것 중 가장 최근 것을 붙입니다.

| 칸 | 바뀐 행 | 어떻게 바뀌었나 |
|---|---:|---|
| `industry` | 4,746 | 스냅샷 날에 **그 앞 스냅샷의 업종**으로 (1,309) · 앞 스냅샷이 없으면 빈칸 (3,437) |
| `industry_bas_dd` · `industry_known_at` | 각 35,324 | 스냅샷 날에 그 앞 스냅샷의 날짜로 (31,887) · 빈칸 (3,437) |
| `industry_ambiguous` | 3,442 | 위와 같은 자리 |
| `kind_stkcert_tp_nm` | 3,462 | **빈칸으로** — 상장 첫날 1,501 · 반출 첫날(2010-01-04) 1,961 |
| `secugrp_nm` | 3,466 | 위 3,462 + 증권그룹이 바뀐 날 4 |
| `sect_tp_nm` | 8,800 | 위 3,462 + **소속부가 바뀐 날** 5,338 (그날은 전날의 소속부) |

빈칸이 된 자리는 **그날까지 알 수 있던 표가 없는 자리**입니다. 채우지 않습니다 — 채우면 다시 미래를 봅니다.

### 무엇이 달라지나

| 쓰임 | 영향 |
|---|---|
| 업종별 표본 선정 (시총 × 업종) | 스냅샷 날에 업종이 **하루 늦게** 바뀝니다. 팀 유니버스에서는 스냅샷 날 15일 중 **12일**에 후보가 바뀌었고 합계 **25종목**입니다 |
| 보통주 거르기 `kind_stkcert_tp_nm == "보통주"` | 빈칸 3,462행이 빠집니다. 상장 첫날 1,501행은 `is_first_listing` 이라 원래 학습에서 덜어내던 행이고, 1,961행은 반출 첫날(2010-01-04)입니다 |
| 조합 K 피처 · 라벨 | **값은 그대로입니다** — 업종·주권종류를 입력으로 쓰지 않습니다. 표본에 드는 행만 바뀝니다 |
| 최종모델 드라이런 | 표본이 바뀌므로 **다시 돌립니다** (이슈 #240) |

### 🔴 판정기도 같이 고쳤습니다

`verify_hf_dataset.py` 는 주권종류를 반출과 **다른 코드**(같은 날짜 조인)로 붙이고 있었습니다. 반출만
고쳤다면 판정기가 옛 규칙으로 남아 *"다르다"* 를 계속 냈을 것입니다. 이제 둘 다
`supply.universe.attach_security_type` 을 부릅니다.

### 반출본 밖에서 새로 쓸 수 있는 것 — 정문 셋

재무 `attach_financial` · 거시 `attach_macro` · 공시 텍스트 `attach_text` 가 저장소에 생겼습니다(PR #243).
반출본에는 아직 싣지 않았습니다. HF 의 `financial/` · `macro/` · `text/` 파일을 직접 쓰신다면 **시점을
정문과 같게** 맞추십시오 — 재무·텍스트는 접수일 **다음 거래일**, 거시는 `known_at`.

| 🔴 함정 | 무엇 |
|---|---|
| 재무 정정본 26% | `rcept_dt` 는 **정정일**입니다. 원본 날짜로 당기면 정정된 숫자를 원본 날짜에 붙입니다 |
| "가장 최근 보고서" | 알게 된 순서가 아니라 **결산 순서**입니다 — 늦게 드러난 옛 해가 최신 해를 밀어냅니다 |
| 순환변동치 | `leading` · `coincident` 는 과거 값이 개정된 2026-09 판입니다 |

### 카드의 재무 예시도 새 규칙으로 고쳤습니다

카드 아래쪽 *"종목코드 → 법인 → 재무 잇기"* 예시가 `fin["rcept_dt"] <= today` — 접수일 **당일**부터
보는 코드였습니다. 위의 정문 규칙과 어긋나서, 달력(`calendar/trading_calendar_dev.parquet`)으로 **접수일
다음 거래일**을 계산하고 종목마다 **결산이 가장 늦은 보고서**를 고르는 예시로 바꿨습니다. 옛 예시를
복사해 쓰셨다면 한 번 확인해 주십시오.

### 재배포 판정기도 고쳤습니다

판정기(`verify_hf_dataset`)는 문자열 칸의 차이가 결측 엇갈림뿐이면 전부 표기 한계(⚪)로 봤습니다. 그래서
이번에 주권종류가 '보통주' → 빈칸이 된 3,462행을 ⚪ 로 적었습니다(업종 칸이 붉어서 판정은 맞았습니다).
이제 **남은 쪽이 빈 문자열일 때만** 표기 한계로 보고, 값이 사라진 것은 변화(🔴)로 셉니다. 같은 두 반출본에
다시 돌려 주권종류 3칸이 🔴 로, CSV 의 빈 소속부 44,756행은 그대로 ⚪ 로 나오는 것을 확인했습니다.

### 실측

| | 값 |
|---|---:|
| 반출본 행 | 7,888,945 (안 바뀜) |
| 바뀐 행 (어느 칸이든) | **42,161** (0.53%) |
| 업종 채움 | 7,736,416 (98.1%) |
| 보통주 | 7,416,721 |
| 품질 원장 | `red` · 붉은 항목 1 (`outlier.adj_suspect_rows` · 의심 1,352행) — 막지 않고 카드에 적습니다 |

---

## 2026-09-10 — 총수익 세 칸 (34 → 37칸) · 원장 8축

**다시 받을 파일은 `full/daily_price_dev.parquet` 하나입니다.** 나머지 일곱 개는
그대로입니다. **기존 34칸의 값은 한 행도 바뀌지 않았습니다** — 새 칸 셋이 옆에 붙었을
뿐입니다.

### 무엇이 늘었나

| 칸 | 뜻 |
|---|---|
| `adj_close_tr` | **총수익 지수** — 배당까지 재투자한 값 |
| `adj_dividend` | 그날 얹힌 주당 배당 (**수정 배율을 태운 값**) |
| `is_dividend_suspect` | 원본 배당금의 단위 오류 표시 (전 구간 1행) |

### 🔴 왜 필요했나 — 우리 수익률에 배당이 빠져 있었습니다

`adj_close` 는 액면분할·무상증자·주식배당까지만 편 값이라 **현금배당이 없습니다.**
학계 표준인 CRSP 는 `RET`(배당 포함)와 `RETX`(배당 제외)를 나눠 주는데, 우리가 가진 것은
`RETX` 쪽뿐이었습니다.

그 차이가 라벨에 닿습니다. 배당락일의 평균 일간수익률이 평소보다 낮고, 개별종목 중립대가
±2% 이므로 5거래일 창에 배당락일이 들어오면 라벨이 조용히 아래로 밀립니다.

| 축 | 배당락일 | 평소 | 차이 |
|---|---:|---:|---:|
| 가격 `adj_close` | −0.2595% | +0.8870% | **−1.1465%p** |
| 총수익 `adj_close_tr` | +2.2106% | +0.8870% | **+1.3235%p** |

연도별로 가격 축이 음수인 해가 **11/15** 였는데 총수익 축은 **1/15** 입니다.

### 🔴 총수익 칸을 **피처로 쓰지 마십시오**

배당 확정은 **주주총회**입니다. 그날 이전에는 금액을 알 수 없으므로 `adj_close_tr` 이나
`adj_dividend` 를 입력에 넣으면 **미래참조**가 됩니다.

| 쓰임 | 어느 칸 |
|---|---|
| 수익률 · 라벨 · 피처 | **`adj_close`** (그대로 — 바뀌지 않았습니다) |
| 누적 성과 · ΔSharpe · 배당 포함 비교 | 🆕 **`adj_close_tr`** |
| 시가총액 · 원문 대조 | **`close`** |

라벨은 지금처럼 `adj_open`(T+1 시가 → T+6 시가)으로 만듭니다.

### 어떻게 계산했나

```
adj_dividend_t = 배당금_t × (adj_close_t / close_t)
adj_close_tr_t = adj_close_tr_{t-1} × (adj_close_t + adj_dividend_t) / adj_close_{t-1}
```

첫 거래일은 `adj_close_tr = adj_close` 로 두어 두 축이 같은 자리에서 출발합니다.
배당에도 **가격과 같은 배율**을 태웁니다 — 조인되는 20,248행 중 `adj_close/close ≠ 1` 인
행이 6,245행(30.8%)이라, 원금액을 그대로 더하면 그만큼 틀립니다.

현금·동시배당만 담습니다. **주식배당은 수정주가가 이미 폈으므로** 또 더하면 두 번 셉니다.

### 실측

| | 값 |
|---|---:|
| 반출본 행 | 7,888,945 |
| 총수익이 채워진 행 | **7,888,945 (100%)** |
| 배당이 얹힌 행 | 17,044 |
| 단위 오류로 뺀 행 | **1** |
| 총수익이 가격 아래로 내려간 행 | **0** |

품질 원장에 **총수익 축**이 생겼습니다(7 → 8축) — 네 지표 전부 초록입니다.

### 단위 오류를 크기로 자르지 않았습니다

배당이 종가보다 큰 행 넷 중 **셋이 정당한 청산분배금**이었습니다(유전펀드 청산 · 리츠 분배).
대신 금액과 배당률로 **그날의 액면가를 되짚어** 원본이 자기 정합적인지로 가릅니다 — 조인
대상의 **99.29%** 가 맞습니다. 걸린 한 행(윙입푸드홀딩스 2018-12-27 · 주당 18.5억)도 **데이터를
지우지 않고** `is_dividend_suspect` 로 표시만 하고 총수익 계산에서만 뺐습니다.

### 남은 붉은불

`outlier.adj_suspect_rows` **1,352행** — 수정주가 의심 행입니다. **이번 배포가 만든 것이
아니라** 09-08 부터 있던 것이고, 이번에 1,353 → 1,352 로 하나 줄었습니다.

---

## 2026-09-09 — 판정 여섯 칸 (28 → 34칸) · 원장 7축

**다시 받을 파일은 `full/daily_price_dev.parquet` 하나입니다.** 나머지 일곱 개는
그대로입니다. **기존 28칸의 값은 한 행도 바뀌지 않았습니다** — 7,888,945행을 칸마다
맞대 확인했습니다(parquet 끼리 값 비교).

### 🔴 먼저 — 큰 벌과 작은 벌은 **다른 표본**입니다

이번 배포의 핵심입니다. 지금까지 칸 구성만 보고는 알 수 없었습니다.

| | 파일 | 정리매매·거래정지·신규상장 |
|---|---|---|
| **큰 벌** | `full/daily_price_dev.parquet` | **안 뺐습니다** |
| **작은 벌** | `small/stocks_sample30_train_dev.csv` | **뺐습니다** |

개발구간 7,888,945행 중 **251,282행(3.185%)** 이 그 차이입니다. 큰 벌로 그냥 학습하면
작은 벌·팀 기준선과 표본이 다릅니다.

같은 표본으로 맞추려면 한 줄입니다.

```python
df = df[~(df.is_liquidation | df.is_halted | df.is_first_listing)]
```

### 무엇이 생겼나 — 여섯 칸

**주권종류 3칸** — KRX 종목기본정보의 그 날 값입니다.

| 칸 | 값 |
|---|---|
| `kind_stkcert_tp_nm` | `보통주`(7,419,989) · `구형우선주`(344,514) · `신형우선주`(104,689) · `종류주권`(19,753) |
| `secugrp_nm` | `주권` · `외국주권` · `부동산투자회사`(리츠) · `선박투자회사` · `투자회사` · `주식예탁증권` 등 8종 |
| `sect_tp_nm` | 소속부 — `우량기업부` · `중견기업부` · `벤처기업부` · `SPAC(소속부없음)` · `관리종목(소속부없음)` 등 9종 |

**보통주만 쓰시려면** 이제 종목명을 볼 필요가 없습니다.

```python
df = df[df.kind_stkcert_tp_nm == "보통주"]
```

> 종목명이 '우' 로 끝나는지로 판정하면 **연우·동우·신우·미래에셋대우** 같은 보통주가
> 빠집니다. `006800` 은 2020-01-02 코스피 시총 48위라 상위 50 후보에서 조용히
> 사라집니다.

**기업행위 3칸** — 🔴 **표본 선택용입니다. 피처로 쓰지 마십시오.**

| 칸 | 무엇 | 개발구간 |
|---|---|---:|
| `is_liquidation` | 정리매매 — 체결이 끊기기 직전 10체결일 | 17,973 (0.228%) |
| `is_halted` | 거래정지 — 그 행에 체결이 없었다 | 231,808 (2.938%) |
| `is_first_listing` | 신규상장 첫 거래일 — 등락률이 공모가 기준 | 1,501 (0.019%) |

`is_liquidation` 은 *"이 뒤로 체결이 끊긴다"* 를 보고 매깁니다. **그 시점에는 알 수
없는 사실**이라 피처로 넣으면 미래참조입니다.

### 유니버스를 좁히시려면

**무엇을 뺄지는 정해 두지 않았습니다.** 원문 값을 그대로 실었으니 쓰시는 쪽이
고르십시오.

```python
# KOSPI200 지수 방법론에 맞추려면 — 리츠·선박투자회사·SPAC·관리종목도 뺍니다
빼기 = (
    df.secugrp_nm.isin(["부동산투자회사", "선박투자회사", "투자회사",
                        "사회간접자본투융자회사", "외국주권",
                        "주식예탁증권", "주식예탁증서"])
    | df.sect_tp_nm.astype(str).str.contains("SPAC|관리종목|투자주의환기|외국기업")
)
df = df[~빼기]
```

> ⚠️ 이렇게 걸러도 **KOSPI200 과 똑같아지지는 않습니다.** 방법론은 "유동주식비율 10%
> 미만" 과 "상장 후 6개월 미경과" 도 제외하는데, 유동주식비율은 우리가 수집하지
> 않습니다. 그래서 판정을 한 칸으로 뭉치지 않고 원문을 실어 보냅니다.

### 원장이 5축 → 7축이 됐습니다

`QUALITY_LEDGER.json` 과 카드의 품질 표에 두 축이 늘었습니다.

| 축 | 지표 | 값 | 판정 |
|---|---|---:|:--:|
| `validity` | `ohlc_order_rows` | 0 | ✅ |
| | `market_cap_identity_rows` | 0 | ✅ |
| | `negative_value_rows` | 0 | ✅ |
| | `nonpositive_open_rows` | 124 | 기록 |
| `volume` | `surge_rows` | 413,899 (5.426%) | 기록 |
| | `surge_ratio_p999` | 66.66배 | 기록 |

**거래량 급변은 붉게 보지 않습니다.** KRX 시장경보 기준(최근 5일 평균 대비 3배)으로
세지만, 상위를 열어 보면 전부 설명되는 사건입니다 — 삼성전자 액면분할 재상장(158.7배) ·
SK바이오팜 보호예수 해제(73.1배) · HMM 인수전(50.0배). `is_extreme_return` 과 0.0%
겹치는 **독립된 축**입니다.

그리고 품질 표에 **근거 칸**이 생겼습니다. 지금까지 값만 보이고 *"무엇에 대해 몇 배인가"*
같은 기준이 안 나갔습니다.

### 붉은 항목

`outlier.adj_suspect_rows` 하나입니다 — 1,353행(`fdr` 1,193 · `chain` 117 ·
`fdr+ca_fix` 41 · `chain+ca_fix` 2). **09-08 배포와 값이 같습니다.** 이번 변경과
무관한 기존 항목이고, 원장은 막지 않고 붉게 적어 내보냅니다.

### 근거

- PR [#189](https://github.com/devlee328288/Alpha_Stack/pull/189) · 이슈 [#186](https://github.com/devlee328288/Alpha_Stack/issues/186) ①③④
- 데이터파트 v4.1 [변경사항](변경사항.md) · [퀀트기준_대조](퀀트기준_대조.md)

---

## 🆕 2026-09-08 — `full/daily_price_dev.parquet` 에 품질 플래그 네 칸 (24 → 28칸)

**다시 받을 파일은 `full/daily_price_dev.parquet` 하나입니다.** 나머지 일곱 개는
SHA-256 까지 그대로라 다시 받지 않으셔도 됩니다. 기존 24칸의 값도 **한 행도
바뀌지 않았습니다** — 7,888,945행을 칸마다 맞대 확인했습니다.

### 무엇이 생겼나

```python
df = df[~df["is_adj_suspect"]]        # 걸러야 하는 것은 이것 하나뿐입니다
```

| 칸 | 무엇 | 어떻게 쓰나 |
|---|---|---|
| `is_adj_suspect` | KRX 등락률과 우리 수정주가 수익률이 **1%p 넘게 어긋난** 행 | 🔴 **거른다** |
| `is_extreme_return` | 일간수익률 절댓값이 **30%(가격제한폭)를 넘는** 행 | ✅ **남긴다.** 거르지 않습니다 |
| `adj_return_1d` | 수정종가로 계산한 일간수익률(%) | 위 두 플래그의 근거값 |
| `adj_change_rate_gap` | KRX 등락률과의 차이(%p) | `is_adj_suspect` 의 근거값 |

실측: 비교 가능 **7,885,483행** 중 의심 **1,353행**(0.017%) · 극단 **2,801행**(0.036%).
두 플래그는 **겹치지 않습니다** — 의심인 행은 극단에서 빠져 있습니다.

### 🔴 `is_extreme_return` 을 거르지 마십시오

이름과 달리 *"빼라"* 가 아니라 **"진짜 일어난 사건이니 남겨라"** 는 표시입니다.
무상증자 권리락·거래정지 해제·상한가 연속은 하루 30% 넘게 움직이지만 **오류가
아니라 모델이 배워야 할 사건**입니다. 크기로 자르면 그것까지 지워집니다.

걸러야 하는 것은 **KRX 와 어긋난** `is_adj_suspect` 뿐입니다.

### ⚠️ `adj_return_1d` 을 그대로 피처로 쓰지 마십시오

최댓값이 **6,699,900%** 입니다. 오류가 아니라 거래정지 중 `1`원으로 적혀 있던 종목이
67,000원에 재개된 날입니다(`008080` · 2013-09-11). 그리고 그 행은 KRX 등락률과
어긋나지 않아 `is_adj_suspect` 가 **아니라** `is_extreme_return` 입니다 — 즉 위에서
**남기라고** 안내한 행입니다. 남긴 뒤 그대로 넣으면 **스케일이 이 한 행에 끌려갑니다.**

이 칸은 플래그의 **근거값**으로 실은 것입니다. 피처로 쓰시려면 윈저라이즈든
로그변환이든 각자 판단하에 다루세요.

### 왜 파일에 실었나

지금까지 이 플래그는 공급 층(`supply.adj_quality`)에서만 붙었습니다. HF 에서 받아
바로 쓰면 **필터링 전 표본**을 쓰게 되고, 칸 구성만 보고는 팀 기준선과 다른 표본을
쓰고 있다는 것을 눈치채기 어렵습니다. 정의를 파일 한 곳에 둡니다.

**팀 기준선은 `is_adj_suspect` 만 제외한 표본입니다.**

### 함께 들어온 것 — `QUALITY_LEDGER.json`

반출본마다 다섯 축(결측 · 이상치 · 달력 정합 · 중복 · 시점·봉인)을 재서 남깁니다.
**원장은 막지 않고 적습니다** — 붉은 것을 붉게 적어 함께 내보냅니다. 이번 판정은
`red` 이고, 붉은 항목은 `outlier.adj_suspect_rows` 하나입니다(우리가 이어 붙인
`chain` 구간 117행이 KRX 와 어긋납니다). 자세한 표는 데이터셋 카드의
**「데이터 품질 원장」** 절에 있습니다.

---

## 🔴 2026-09-07 (소급 고지 · 오후) — 수정주가 51종목을 다시 만들었습니다

당시 고지를 못 드렸습니다. **2026-09-07 13:29(KST) 이전에 받으셨다면 아래 네 파일을
다시 받으세요.**

```
full/daily_price_dev.parquet
small/stocks_sample30_raw_dev.csv
small/stocks_sample30_train_dev.csv
small/features_labels_stocks30_dev.csv
```

나머지 네 개(지수 파일들과 코스피200 피처·라벨)는 그대로입니다.

### 무엇이 바뀌었나

수정주가를 이어 붙이는 구간(`adj_source = chain`)의 **재개일 규칙**을 고쳤습니다.
인적분할·회생 재상장은 감자가 아닌데 감자로 보고 배수를 매기고 있었습니다.
`chain` 52건(51종목)을 DART 공시와 전수 대조해 인적분할 24 · 회생·합병+감자 28 로
가르고, **51종목 39,166행을 다시 만들었습니다.**

| | 전 | 후 |
|---|---:|---:|
| 개발구간 의심 행 | 1,406 | **1,353** |
| 극단 중 의심 | 149 | **103** |
| 후보군 의심 | 2 | **0** |

같은 판에서 이상치 판정도 바꿨습니다 — **크기가 아니라 어긋남**으로 봅니다.
"30% 넘게 움직였다" 가 아니라 "KRX 가 말한 등락률과 1%p 넘게 다르다" 가 기준입니다.
위 `is_adj_suspect` 가 그 판정입니다.

---

## 🔴 2026-09-07 (소급 고지 · 오전) — KOSDAQ 종목의 업종이 채워졌습니다

`full/daily_price_dev.parquet` 에 **`industry_ambiguous` 칸이 생기고**, 비어 있던
업종 세 칸이 **4,457,684행(56.5%)** 채워졌습니다. 09-05 배포본과 전수 대조한
결과 **값이 바뀐 행은 0**입니다 — 순수하게 *비어 있던 것이 채워진 것*입니다.

그전까지 업종은 **KOSPI 만** 있었습니다. 지금은 KOSDAQ 도 들어옵니다.

```python
# 그전 배포본을 쓰던 코드
kospi_only = df[df["industry"].notna()]     # 예전엔 사실상 KOSPI 필터였습니다
                                            # 지금은 KOSDAQ 까지 들어옵니다
```

`industry_ambiguous` 는 **그 종목이 그 스냅샷에서 업종 둘에 실려 있었다**는 표시입니다.
참이면 우리가 규칙으로 하나를 골랐다는 뜻입니다(종목 수가 많은 쪽 → 같으면 사전순).
KOSDAQ 에서 17쌍이 그랬습니다. 무시하셔도 되고 걸러내셔도 됩니다.

---

## 2026-09-05 — 감자 보정 관문 ③

`full/daily_price_dev.parquet` 만 다시 쓰였습니다.

---

## 🔴 2026-09-03 (2차) — `full/daily_price_dev.parquet` 에 업종 세 칸이 새로 생겼습니다

**`full/daily_price_dev.parquet` 만 다시 받으세요.** 나머지 7개 파일은 SHA-256 까지
그대로라 다시 받지 않아도 됩니다. 행 수(7,888,945)도 같고, 기존 20칸은 값 하나 안
바뀌었습니다 — 오른쪽에 3칸이 붙었을 뿐입니다.

### 무엇이 생겼나

| 칸 | 뜻 |
|---|---|
| `industry` | KRX 업종명 (`전기·전자` · `화학` · `일반서비스` …) |
| `industry_bas_dd` | 어느 스냅샷에서 왔나 (`YYYYMMDD`) |
| `industry_known_at` | 언제부터 알 수 있었나 — 스냅샷 날짜의 다음 거래일 |

### 왜 생겼나 — `sector` 는 업종이 아니었습니다

`sector` 칸은 KRX **소속부**(중견기업부·벤처기업부…)입니다. KOSPI 는 100% 빈 값이고
KOSDAQ 것도 산업 업종이 아닙니다. 그래서 *"업종 상위 10개 → 업종마다 시총 상위 종목"*
같은 연결을 만들 수 없었습니다 (이슈 #92 · #94).

종목→업종은 우리 자료 어디에도 없어서, KRX Data Marketplace 화면에서 **사람이 내려받은**
업종분류 현황 스냅샷(매년 첫 거래일 + 2024-07-01 · KOSPI · 18장)을 **그 행의 날짜 이전
가장 최근 것**으로 붙였습니다. 뒤의 스냅샷을 앞으로 당기지 않습니다 — 2026년 분류로
2015년을 판정하지 않습니다. 18장 16,650행의 종가·시가총액을 `daily_price` 와 전량 맞대
하나도 어긋나지 않는 것을 확인했습니다.

### 알아야 할 것 넷

1. **KOSPI 만 있습니다.** KOSDAQ 행의 `industry` 는 비어 있습니다. 개발구간 전체로는
   41.6% 가 채워져 있는데 그게 곧 KOSPI 행의 비율이고, **KOSPI 행만 보면 99.0%** 입니다.
2. 그해 첫 거래일 스냅샷 **뒤에 상장한 종목**은 다음 해 첫 스냅샷까지 빕니다 (남은 1%).
   모르는 값을 지어내지 않았습니다.
3. **업종 체계가 바뀝니다.** `IT 서비스`·`부동산`·`오락·문화` 는 2025-01-02 스냅샷부터라
   개발구간(~2024-08-30)에서는 옛 체계 24종만 보입니다. 스냅샷 원본 파일은 KRX 약관
   제12조 ② 때문에 올리지 않습니다 — 칸만 나갑니다.
4. **업종지수(`index_price`)와 붙일 때** 이름이 세 곳 다릅니다 — `은행`·`기타금융` → `금융`,
   `전기·전자` → `전기전자`, `기타제조` → `제조`. `supply.sector.index_name_for()` 가 바꿔
   줍니다. 그리고 **`제조`·`금융` 지수는 여러 업종의 합**이라 "업종 상위 N" 을 고를 땐
   빼세요 (`supply.sector.UMBRELLA_INDICES`) — 넣으면 같은 종목을 두 번 셉니다.

### 바로 쓰기

```python
import pandas as pd

df = pd.read_parquet("daily_price_dev.parquet")
kospi = df[df["market"] == "KOSPI"]

# 그날 업종별 시가총액 상위 5 (우선주가 섞입니다 — 보통주만 쓰려면 supply.top_by_market_cap, #92)
top = (kospi[kospi["bas_dd"] == "20240102"]
       .sort_values("market_cap", ascending=False)
       .groupby("industry").head(5))
```

만든 방법과 검증은 저장소의 `docs/기능명세/version1.3/업종_스냅샷_공급.md` 와
`notebooks/01-데이터수집/07.업종은어디에도없었다.ipynb` 에 있습니다.

---

## 2026-09-03 (1차) — 이전 배포본을 받으셨다면 이것부터 읽으세요

**`small/features_labels_stocks30_dev.csv` 를 버리고 다시 받으세요.** 이 파일의
피처와 라벨이 **원가격으로 계산돼 있었습니다.** 나머지 7개 파일은 SHA-256 까지
그대로라 다시 받지 않아도 됩니다.

### 무엇이 잘못됐나

원문 `open`·`close` 에는 액면분할이 반영돼 있지 않습니다. 그대로 지표와 라벨을
계산하면 **분할일 하루가 폭락으로 읽힙니다.**

```
삼성전자 2018-04-25 · 5거래일 시가 수익률
  원가격으로 →  -97.90%  → 라벨 "하락"     ← 틀렸다
  수정주가로 →   +5.12%  → 라벨 "상승"     ← 맞다
```

라벨은 5거래일 창이라 분할일 근처만 틀리지만, **피처는 창이 길어 훨씬 오래 끕니다.**
특히 지수이동평균 계열이 그렇습니다.

| 무엇 | 실측 (표본 30종목) |
|---|---|
| 분할·병합이 있던 종목 | **18 / 30** |
| 라벨이 뒤집힌 행 | **370행 (0.448%)** |
| `rsi_14` 오염 (삼성전자 · 분할 1건) | **198행 (5.49%)** · 최대 50.17포인트 |
| `atr_14` 오염 | 186행 (5.16%) |
| `sma_60` / `sma_20` / `sma_5` | 59행 / 19행 / 4행 |

라벨 분포도 그만큼 움직였습니다 — `상승 26,352 → 26,408` · `하락 29,271 → 29,194`.
**분할일 가짜 폭락이 "하락" 으로 세어지고 있었다**는 뜻입니다.

### 무엇을 고쳤나

`scripts/export_team_dataset.py` 가 종목 피처·라벨을 `adj_open`·`adj_high`·`adj_low`·
`adj_close` 로 계산합니다. **칸 이름은 바꾸지 않았습니다** — `sma_5` 는 그대로 `sma_5`
이고 안의 값만 기준이 바뀌었습니다. 받아 쓰시던 코드는 그대로 돌아갑니다.

### 영향이 없는 것

- **`features_labels_kospi200_dev.csv`** — 지수에는 분할이라는 사건 자체가 없습니다.
  라벨 분포도 `상승 1,214 · 중립 1,390 · 하락 1,008` 로 이전과 완전히 같습니다.
- **원시 시세 파일 전부** — `daily_price_dev.parquet` 등은 처음부터 원문과 수정값을
  둘 다 담고 있었고, 한 바이트도 바뀌지 않았습니다.

### 함께 들어온 것

- **`PROFILE.json`** 이 새로 생겼습니다. 파일 8개 · 칸 181개의 결측률·값 범위·분포가
  기계가 읽는 형태로 들어 있습니다. 아래 "칸마다 무엇이 들었나" 표가 이 파일에서
  자동으로 만들어집니다.

발견해 주신 신장환 팀원께 감사드립니다.
